# cc-tail

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh  just-do-it.sh
.claude/: settings.json
.claude/rules/: rust-api.md  security.md  string-handling.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.jdi/: .gitignore  LESSONS.md  config.yaml
.jdi/reports/cc-tail-n1c/: orchestrator.md  plan.md
.jdi/reports/cc-tail-rjz/: finalize.md  implement.md  orchestrator.md  plan.md  review.md
.jdi/workflows/: default.yaml
docs/: SPEC.md  enhancements.md  feature-progress.md
src/: cli.rs  config.rs  content_render.rs  filter.rs  lib.rs  log_entry.rs  main.rs  project_path.rs  replay.rs  ring_buffer.rs  search.rs  session.rs  session_stats.rs  stream.rs  symbols.rs  theme.rs  tmux.rs  tool_summary.rs  watcher.rs
src/tui/: app.rs  event.rs  filter_overlay.rs  mod.rs  ui.rs
tests/: integration.rs
