[package]
name = "cctail"
version = "0.1.0"
edition = "2021"
description = "Monitor Claude Code sessions in real-time"
license = "MIT"
repository = "https://github.com/kenfdev/cc-tail"
readme = "README.md"
keywords = ["claude", "cli", "tui", "monitoring", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
regex = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
rstest = "0.23"
